fix(match2): hide on mobile not working

--- a/stylesheets/commons/Bracket.less
+++ b/stylesheets/commons/Bracket.less
@@ -1206,9 +1206,6 @@ Template(s): All Brackets, mobile support
 Author(s): FO-nTTaX
 *******************************************************************************/
 @media ( max-width: 767px ) {
-	.bracket-popup .hide-mobile {
-		display: none;
-	}
 	/*
 	 * Icon: 46px
 	 * Each score: 22px
